feat: 构建选课相关 api
